feat(CAT-FR-GD-07): finalize
Added more tests